# monitoring-course

./: .gitignore  README.md
01-syslog/: README.md  create-network.sh  start-syslog-server.sh  start-ubuntu-shell.sh  vars
01-syslog/data/fluentd/: config.conf
diagrams/: hexatek.py  otel.py  pyproject.toml
hexatek/02-prometheus-mimir/: README.md  docker-compose.yaml
hexatek/02-prometheus-mimir/config/: alerts.yaml  mimir.yaml  prometheus.yaml  rules.yaml
hexatek/03-grafana/: README.md  docker-compose.yaml
hexatek/04-alertmanager/: README.md  docker-compose.yaml
hexatek/04-alertmanager/config/: alertmanager.yml  alertmanager.yml   discord_fr.tmpl
hexatek/05-fluentbit-opensearch/: README.md  docker-compose.yaml  package-lock.json  package.json  script.js
hexatek/05-fluentbit-opensearch/config/fluent-bit/: filters.lua  fluent-bit.conf  parsers.conf
hexatek/06-jaeger/: README.md  docker-compose.yaml  package-lock.json  package.json  script-otlp-tempo.js  script-zipkin.js  script.js
hexatek/06-jaeger/config/: tempo.yaml
hexatek/07-opentelemetry/: README.md  docker-compose.yaml
hexatek/07-opentelemetry/config/: otel-collector-config.yaml
hexatek/07-opentelemetry/pokedex/: Dockerfile  package-lock.json  package.json
hexatek/07-opentelemetry/pokedex/public/: index.html  style.css
hexatek/07-opentelemetry/pokedex/src/: app.js  otel.js
